--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,5 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 L5_SWAGGER_GENERATE_ALWAYS=true
+
+ITEM_PER_PAGE=50
